--- a/src/css/main.css
+++ b/src/css/main.css
@@ -7,8 +7,8 @@
   top: 0;
   left: 0;
   position: absolute;
-  height: 100vh;
-  width: 100vw;
+  height: 100%;
+  width: 100%;
 }
 .backgroundStyle::after {
   position: absolute;
